fix: overflow und mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,3 +4,11 @@ input {
   background-color: transparent;
   font-size: 3.5rem;
 }
+@media screen and (max-width: 800px) {
+  input {
+    color: inherit;
+    margin: 0;
+    background-color: transparent;
+    font-size: 2.5rem;
+  }
+}
